// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChorusAdapter toCommon returns proper result 1`] = `
Object {
  "bop": "0BOP",
  "date_debut": 2022-02-02T00:00:00.000Z,
  "exercice": 2022,
  "montant_verse": 42789,
}
`;

exports[`ChorusAdapter toPayment should return complet entity 1`] = `
Object {
  "activitee": Object {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Chorus",
    "type": "string",
    "value": "Appels a projet",
  },
  "amount": Object {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Chorus",
    "type": "number",
    "value": 89988.3,
  },
  "bop": Object {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Chorus",
    "type": "string",
    "value": "101",
  },
  "branche": Object {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Chorus",
    "type": "string",
    "value": "Associations",
  },
  "centreFinancier": Object {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Chorus",
    "type": "string",
    "value": "UO DGER XXXX-C001",
  },
  "codeBranche": Object {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Chorus",
    "type": "string",
    "value": "Z039",
  },
  "compte": undefined,
  "dateOperation": Object {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Chorus",
    "type": "object",
    "value": 2023-07-12T00:00:00.000Z,
  },
  "domaineFonctionnel": Object {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Chorus",
    "type": "string",
    "value": "Appels à projet",
  },
  "ej": Object {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Chorus",
    "type": "string",
    "value": "0001821732",
  },
  "libelleProgramme": Object {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Data Bretagne",
    "type": "string",
    "value": "PROGRAM 101",
  },
  "numeroDemandePaiement": Object {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Chorus",
    "type": "string",
    "value": "000195567",
  },
  "numeroTier": Object {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Chorus",
    "type": "string",
    "value": "ASSO 1",
  },
  "programme": Object {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Data Bretagne",
    "type": "number",
    "value": 101,
  },
  "siret": Object {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Chorus",
    "type": "string",
    "value": "10000000000001",
  },
  "type": undefined,
  "versementKey": Object {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Chorus",
    "type": "string",
    "value": "0001821732",
  },
}
`;

exports[`ChorusAdapter toPaymentFlatEntity should return PaymentFlatEntity when data is fully provided 1`] = `
Object {
  "actionCode": "0101-01-02",
  "actionLabel": "Label d'action Exemple",
  "activityCode": "077601003222",
  "activityLabel": "Label d'activité Exemple",
  "amount": 89988.3,
  "attachementComptable": "BRET",
  "centreFinancierCode": "AA01/0776-C001-4000",
  "centreFinancierLibelle": "UO DGER XXXX-C001",
  "ej": "0001821732",
  "exerciceBudgetaire": 2023,
  "idEntrepriseBeneficiaire": Siren {
    "siren": "100000000",
  },
  "idEtablissementBeneficiaire": Siret {
    "siret": "10000000000001",
  },
  "idVersement": "10000000000001-0001821732-2023",
  "ministry": "Ministère Exemple",
  "ministryAcronym": "ME",
  "mission": "Mission Exemple",
  "operationDate": 2023-07-12T00:00:00.000Z,
  "programName": "Programme Exemple",
  "programNumber": 101,
  "provider": "chorus",
  "regionAttachementComptable": "Bretagne",
  "typeIdEntrepriseBeneficiaire": "siren",
  "typeIdEtablissementBeneficiaire": "siret",
  "uniqueId": "10000000000001-0001821732-2023-101-0101-01-02-077601003222-1689120000000-BRET-AA01/0776-C001-4000",
}
`;

exports[`ChorusAdapter toPaymentFlatEntity should return PaymentFlatEntity with null when data is not fully provided 1`] = `
Object {
  "actionCode": "0101-01-02",
  "actionLabel": "Label d'action Exemple",
  "activityCode": "077601003222",
  "activityLabel": "Label d'activité Exemple",
  "amount": 89988.3,
  "attachementComptable": "BRET",
  "centreFinancierCode": "AA01/0776-C001-4000",
  "centreFinancierLibelle": "UO DGER XXXX-C001",
  "ej": "0001821732",
  "exerciceBudgetaire": 2023,
  "idEntrepriseBeneficiaire": Siren {
    "siren": "100000000",
  },
  "idEtablissementBeneficiaire": Siret {
    "siret": "10000000000001",
  },
  "idVersement": "10000000000001-0001821732-2023",
  "ministry": "Ministère Exemple",
  "ministryAcronym": "ME",
  "mission": null,
  "operationDate": 2023-07-12T00:00:00.000Z,
  "programName": null,
  "programNumber": 101,
  "provider": "chorus",
  "regionAttachementComptable": "Bretagne",
  "typeIdEntrepriseBeneficiaire": "siren",
  "typeIdEtablissementBeneficiaire": "siret",
  "uniqueId": "10000000000001-0001821732-2023-101-0101-01-02-077601003222-1689120000000-BRET-AA01/0776-C001-4000",
}
`;
